export const snapshot = {};

snapshot[`check_urls plugin 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      loader: [AsyncFunction: toml],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".page.ts",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".page.js",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.json",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".markdown",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".vto",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
  ],
  src: [
    "/",
    "/index.md",
    "/page1.md",
    "/page4.md",
  ],
}
`;

snapshot[`check_urls plugin 2`] = `[]`;

snapshot[`check_urls plugin 3`] = `
[
  {
    content: '{
  "/page2/": [
    "/"
  ],
  "/page2": [
    "/"
  ]
}',
    data: {
      basename: "check_urls",
      content: '{
  "/page2/": [
    "/"
  ],
  "/page2": [
    "/"
  ]
}',
      page: [
        "src",
        "data",
        "asset",
      ],
      url: "check_urls.json",
    },
    src: {
      asset: true,
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p><a href="./page1/">Relative link to existing page</a>
<a href="/page1">Link to existing page without trailin slash</a></p>
<p><a href="/page2/">Link to non existing page</a>
<a href="./page2">Relative link to non existing page without trailin slash</a></p>
<p><a href="/page3/">Link to redirected page</a>
<a href="./page3">Relative link to redirected page without trailin slash</a></p>
</body></html>',
    data: {
      basename: "index",
      children: '<p><a href="./page1/">Relative link to existing page</a>
<a href="/page1">Link to existing page without trailin slash</a></p>
<p><a href="/page2/">Link to non existing page</a>
<a href="./page2">Relative link to non existing page without trailin slash</a></p>
<p><a href="/page3/">Link to redirected page</a>
<a href="./page3">Relative link to redirected page without trailin slash</a></p>
',
      content: "[Relative link to existing page](./page1/)
[Link to existing page without trailin slash](/page1)

[Link to non existing page](/page2/)
[Relative link to non existing page without trailin slash](./page2)

[Link to redirected page](/page3/)
[Relative link to redirected page without trailin slash](./page3)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
        "asset",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/index",
      remote: undefined,
    },
  },
  {
    content: "<!DOCTYPE html>
<html><head></head><body><h1>Page 1</h1>
</body></html>",
    data: {
      basename: "page1",
      children: "<h1>Page 1</h1>
",
      content: "# Page 1

",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
        "asset",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page1/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/page1",
      remote: undefined,
    },
  },
  {
    content: "<!DOCTYPE html>
<html><head></head><body><h1>Page 3 is now 4</h1>
</body></html>",
    data: {
      basename: "page4",
      children: "<h1>Page 3 is now 4</h1>
",
      content: "# Page 3 is now 4
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      oldUrl: "/page3/",
      page: [
        "src",
        "data",
        "asset",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page4/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/page4",
      remote: undefined,
    },
  },
]
`;

snapshot[`check_urls plugin (strict mode) 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      loader: [AsyncFunction: toml],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".page.ts",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".page.js",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.json",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".markdown",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".vto",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
  ],
  src: [
    "/",
    "/index.md",
    "/page1.md",
    "/page4.md",
  ],
}
`;

snapshot[`check_urls plugin (strict mode) 2`] = `[]`;

snapshot[`check_urls plugin (strict mode) 3`] = `
[
  {
    content: '{
  "/page1": [
    "/"
  ],
  "/page2/": [
    "/"
  ],
  "/page2": [
    "/"
  ],
  "/page3/": [
    "/"
  ],
  "/page3": [
    "/"
  ]
}',
    data: {
      basename: "check_urls",
      content: '{
  "/page1": [
    "/"
  ],
  "/page2/": [
    "/"
  ],
  "/page2": [
    "/"
  ],
  "/page3/": [
    "/"
  ],
  "/page3": [
    "/"
  ]
}',
      page: [
        "src",
        "data",
        "asset",
      ],
      url: "check_urls.json",
    },
    src: {
      asset: true,
      ext: "",
      path: "",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p><a href="./page1/">Relative link to existing page</a>
<a href="/page1">Link to existing page without trailin slash</a></p>
<p><a href="/page2/">Link to non existing page</a>
<a href="./page2">Relative link to non existing page without trailin slash</a></p>
<p><a href="/page3/">Link to redirected page</a>
<a href="./page3">Relative link to redirected page without trailin slash</a></p>
</body></html>',
    data: {
      basename: "index",
      children: '<p><a href="./page1/">Relative link to existing page</a>
<a href="/page1">Link to existing page without trailin slash</a></p>
<p><a href="/page2/">Link to non existing page</a>
<a href="./page2">Relative link to non existing page without trailin slash</a></p>
<p><a href="/page3/">Link to redirected page</a>
<a href="./page3">Relative link to redirected page without trailin slash</a></p>
',
      content: "[Relative link to existing page](./page1/)
[Link to existing page without trailin slash](/page1)

[Link to non existing page](/page2/)
[Relative link to non existing page without trailin slash](./page2)

[Link to redirected page](/page3/)
[Relative link to redirected page without trailin slash](./page3)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
        "asset",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/index",
      remote: undefined,
    },
  },
  {
    content: "<!DOCTYPE html>
<html><head></head><body><h1>Page 1</h1>
</body></html>",
    data: {
      basename: "page1",
      children: "<h1>Page 1</h1>
",
      content: "# Page 1

",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
        "asset",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page1/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/page1",
      remote: undefined,
    },
  },
  {
    content: "<!DOCTYPE html>
<html><head></head><body><h1>Page 3 is now 4</h1>
</body></html>",
    data: {
      basename: "page4",
      children: "<h1>Page 3 is now 4</h1>
",
      content: "# Page 3 is now 4
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      oldUrl: "/page3/",
      page: [
        "src",
        "data",
        "asset",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page4/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/page4",
      remote: undefined,
    },
  },
]
`;
